# test1

./: gradlew.bat
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xwr/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: speex.cpp
app/src/main/java/com/xwr/test/: MainActivity.java  SpeexUtil.java
app/src/test/java/com/xwr/test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
